# TomatoFlow

./: .gitignore  Dockerfile.tauri  README.md  docker-compose.yml
backend/: package.json
backend/src/: db.js  index.js  timer.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  index.css  store.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/components/: Settings.vue  Stats.vue  TaskList.vue  Timer.vue
