[package]
name = "tomato-flow"
version = "1.0.0"
description = "TomatoFlow - Self-Hosted Pomodoro Timer"
authors = ["cyberpunk3351"]
license = "MIT"
repository = "https://github.com/cyberpunk3351/TomatoFlow"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# by default tauri runs in production mode
# this feature is used for development builds
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
